--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
         <script src="lib/angular.js"></script>
         <script src="lib/angular-route.js"></script>
         <script src="lib/angular-sanitize.js"></script>
+        <script src="lib/angular-translate.js"></script>
+        <script src="lib/angular-translate-loader-static-files.js"></script>
         <script src="lib/ng-context-menu.min.js"></script>
         <script src="lib/hyperlink.js"></script>
         <script src="lib/marked.min.js"></script>
